# Brain-Capital

./: .gitignore  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: config.py  main.py
app/api/: dependencies.py
app/api/v1/: countries.py  indicators.py  insights.py
app/core/: database.py  logging.py
app/models/: __init__.py  ai_insight.py  country.py  dimension.py  indicator.py  indicator_value.py  pillar.py
app/schemas/: __init__.py  country.py  filter.py  indicator.py  insight.py
app/services/: ai_service.py  country_service.py  filter_service.py  indicator_service.py
app/static/css/: main.css
app/static/js/: filters.js  htmx-config.js  map.js
app/templates/: base.html  index.html
app/templates/components/: filters.html  insight_panel.html  map_container.html
app/templates/partials/: filter_results.html  insight_content.html
app/web/: htmx.py  routes.py
prompt/: promt1.md
scripts/: seed_database.py
