[project]
name = "brain-capital"
version = "0.1.0"
description = "Brain Capital Intelligence Platform MVP"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Templates & Forms
    "jinja2>=3.1.4",
    "python-multipart>=0.0.12",

    # Database
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",

    # Data Validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # Data Processing
    "pandas>=3.0.1",
    "numpy>=2.0.0",

    # HTTP & Async
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",

    # Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.1",

    # AI/ML (Future)
    "openai>=1.55.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",

    # Caching
    "redis>=5.2.0",
    "hiredis>=3.0.0",

    # Monitoring & Logging
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",

    # Code Quality
    "ruff>=0.8.0",
    "black>=24.10.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",

    # Development Tools
    "ipython>=8.30.0",
    "ipdb>=0.13.13",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.black]
line-length = 100
target-version = ['py313']

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
